test/Fail/Unknown-names-in-polarity-pragmas.agda
{-# OPTIONS --warning=error #-}

{-# POLARITY F #-}
{-# POLARITY G #-}
